--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
 	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	  <img src="http://dummyimage.com/300x400" alt="Picture of Me!" class="flexible" />
+	  <img src="images/evening.jpg" alt="time of day pic" id= "mypic" class="flexible" />
      </main>
     <footer>
       <small>&copy; 2013, All Rights Reserved ~
@@ -86,24 +86,26 @@
     </footer>
 	<!-- END Footer -->
 	<script>
+
 		let myDate = new Date(); 
 		let myHours = myDate.getHours(); 
 		let myGreeting = '';
 		let myColor = '';
+		let myPic = "";
 
 		myHours = 8; //TEST ONLY - REMOVE THIS
 
 		if(myHours >= 5 && myHour <12){
-			myGreeting = "Good Morning?" 
- 		 	myColor = "yellow";
+			myGreeting = "Good Morning"; 
+			  myColor = "yellow";
+			  myPic= "morning.jpg";
 		}else{
 			alert('NOT morning');
 		}
 
-
-
-document.getElementById('mydiv').innerHTML = myGreeting;
-document.body.style.backgroundColor = myColor;
+		document.getElementById('mydiv').innerHTML = myGreeting;
+		document.body.style.backgroundColor = myColor;
+		document.getElementById("mypic").src = "myPic";
 
 	</script>
 </body>
