--- a/index.html
+++ b/index.html
@@ -71,41 +71,60 @@
     <main>
 	
 	 <header><h3>An IT 121 assignment by Maria O'Sullivan</h3></header>
-	 <div id = "myGreeting"></div>
+	 <div id="mydiv"></div>
 	 <p>This HTML5 Flexible template could be a good starting point for some of your projects.  The template file starts by setting a background color on the HTML element, and setting max-width on the body, which is styled like a wrapper.  The BODY element is also set to a percentage width so it leaves a bit of HTML color until it shrinks in size toward the mobile view.</p>
 	 <p>There is an image with a class of FLEXIBLE which is set to a max-width equal to the size of the image.  Simutaneously the class sets the image to a percentage width, allowing the image to flex in size.  The height is not changed, as this would skew the image.</p>
 	 <p>The LIST elements inside the NAV are displayed inline by setting the display to be inline-block.  Bullets are removed by setting the UL to display</p>
 	 <p>The FOOTER includes a clear:both to keep everything above it!</p>
-	  <img src="images/evening.jpg" alt="time of day pic" id= "mypic" class="flexible" />
+	  <img src="images/evening.jpg" alt="time of day pic" id="mypic" class="flexible" />
      </main>
     <footer>
-      <small>&copy; 2013, All Rights Reserved ~
+      <small><div id="myyear"></div>
       <a href="https://validator.w3.org/check/referer" target="_blank">Valid HTML</a> ~
       <a href="https://jigsaw.w3.org/css-validator/check?uri=referer" target="_blank">Valid CSS</a>
       </small>
     </footer>
 	<!-- END Footer -->
 	<script>
+			//time of day changes
 
 		let myDate = new Date(); 
 		let myHours = myDate.getHours(); 
+		let myYear = myDate.getFullYear();
 		let myGreeting = '';
 		let myColor = '';
-		let myPic = "";
+		let myPic = "images/";
 
-		myHours = 8; //TEST ONLY - REMOVE THIS
+		//myHours = 1 ; //TEST ONLY - REMOVE THIS
 
-		if(myHours >= 5 && myHour <12){
-			myGreeting = "Good Morning"; 
+		if(myHours >= 5 && myHours <12){
+			myGreeting = "Good Morning!"; 
 			  myColor = "yellow";
-			  myPic= "morning.jpg";
+			  myPic+= "morning.jpg";
+
+		} else if (myHours >= 12 && myHours <18) {
+			myGreeting = "Good Afternoon!"; 
+			  myColor = "orange";
+			  myPic+= "afternoon.jpg";
+
+			} else if (myHours >= 18 && myHours <23) {
+			myGreeting = "Good Evening!"; 
+			  myColor = "lightblue";
+			  myPic+= "evening.jpg";
+
 		}else{
-			alert('NOT morning');
+			myGreeting = "Good Night!"; 
+			  myColor = "purple";
+			  myPic+= "night.jpg";
 		}
 
+		//Copyright thingy 
+		var myCopyRight = "&copy; 2013 - " + myYear + ", All rights reserved"
+		
 		document.getElementById('mydiv').innerHTML = myGreeting;
 		document.body.style.backgroundColor = myColor;
-		document.getElementById("mypic").src = "myPic";
+		document.getElementById("mypic").src = myPic;
+		document.getElementById('myyear').innerHTML = myCopyRight;
 
 	</script>
 </body>
